--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+table, th, td {
+  border: 1px solid;
+}
+
+.date-range {
+  display: flex;
+  justify-content: space-between;
+}
+
+.event-name {
+  background-color: red;
+  padding: 10px;
+  opacity: 0.5;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
