--- a/src/App.css
+++ b/src/App.css
@@ -15,30 +15,65 @@ table, th, td {
 
 .date-label {
   display: flex;
+  column-gap: 15px;
   overflow-x: auto;
   white-space: nowrap;
   background-color: #f5f5f5;
   border: 1px solid #ddd;
   padding: 10px;
   margin-bottom: 10px;
+  height: 100dvh;
 }
 
 .date-label p {
   display: inline-block;
-  margin: 0 15px 0 0;
-  padding: 5px 10px;
+  /* margin: 0 15px 0 0; */
+  /* padding: 5px 10px; */
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-weight: bold;
   text-align: center;
   white-space: nowrap;
+  position: relative;
 }
 
 .event-name {
   background-color: red;
   padding: 10px;
+  padding-right: 0;
   opacity: 0.5;
   border-radius: 10px;
   margin-bottom: 10px;
+}
+.timeline-item {
+  position: absolute;
+  left: 0
+}
+.event-name p {
+  margin: 0;
+  padding: 0
+}
+
+.date-label-2 {
+  display: flex;
+  justify-content: space-between;
+  /* display: none; */
+}
+
+.date-label-2 p {
+  display: inline-block;
+  /* margin: 0 15px 0 0; */
+  /* padding: 5px 10px; */
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  position: relative;
+}
+
+.date-label p:last-child {
+  margin-right: 0;
 }
